# Renderer3D

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: Application.cpp  Application.h  CMakeLists.txt  main.cpp
src/platform/: EventSystem.cpp  EventSystem.h  Events.h  Input.cpp  Input.h  Platform.cpp  Platform.h  Window.cpp  Window.h
src/scene/: ComponentSystem.h  Components.h  Scene.cpp  Scene.h
tools/r3d_imp/: CMakeLists.txt  ComponentSystem.h  Components.h  Data.h  Mesh.h  SceneLoader.cpp  SceneLoader.h  pch.h  r3d_imp.cpp
